--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -100,8 +100,8 @@ popupShowPopupPrefix=‘%S’ tonen
 
 # Bad Content Blocker Doorhanger Notification
 # %S is brandShortName
-badContentBlocked.blocked.message=%S blokkeerd inhoud op deze pagina.
-badContentBlocked.notblocked.message=%S blokkeerd geen enkele inhoud op deze pagina.
+badContentBlocked.blocked.message=%S blokkeert inhoud op deze pagina.
+badContentBlocked.notblocked.message=%S blokkeert geen enkele inhoud op deze pagina.
 
 # missing plugin installer
 installPlugin.message = Wilt u de plug-in die nodig is om de media op deze pagina weer te geven installeren?
@@ -123,7 +123,7 @@ crashedpluginsMessage.learnMore=Meer info…
 # loaded a search page for the given word.  An infobar then asks to the user
 # whether he rather wanted to visit the host.  %S is the recognized host.
 keywordURIFixup.message=Wilde u naar %S gaan?
-keywordURIFixup.goTo=Ja, ga naar %S
+keywordURIFixup.goTo=Ja, ik wil naar %S
 keywordURIFixup.goTo.accesskey=J
 keywordURIFixup.dismiss=Nee bedankt
 keywordURIFixup.dismiss.accesskey=N
@@ -278,7 +278,7 @@ newWindowButton.tooltip=Een nieuw venster openen (%S)
 # New Tab button tooltip
 # LOCALIZATION NOTE (newTabButton.tooltip):
 # %S is the keyboard shortcut for "New Tab"
-newTabButton.tooltip=Nieuw tabblad openen (%S)
+newTabButton.tooltip=Een nieuw tabblad openen (%S)
 
 # Offline web applications
 offlineApps.available=Deze website (%S) vraagt gegevens op uw computer op te slaan voor offlinegebruik.
@@ -309,7 +309,7 @@ identity.unencrypted=Uw verbinding met deze website is niet versleuteld.
 identity.unknown.tooltip=Deze website verstrekt geen identiteitsinformatie.
 
 # LOCALIZATION NOTE (identity.chrome): %S is replaced with the brandShortName.
-identity.chrome=Dit is een veilige %S-pagina.
+identity.chrome=Dit is een beveiligde %S-pagina.
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Bladwijzer voor deze pagina gemaakt
@@ -510,7 +510,7 @@ identity.loggedIn.signOut.accessKey = A
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
 #                    getUserMedia.shareScreenAndMicrophone.message):
 #  %S is the website origin (e.g. www.mozilla.org)
-getUserMedia.shareCamera.message = Wilt u uw camera delen met %S??
+getUserMedia.shareCamera.message = Wilt u uw camera delen met %S?
 getUserMedia.shareMicrophone.message = Wilt u uw microfoon delen met %S?
 getUserMedia.shareScreen.message = Wilt u uw scherm delen met %S?
 getUserMedia.shareCameraAndMicrophone.message = Wilt u uw camera en microfoon delen met %S?
@@ -560,7 +560,7 @@ getUserMedia.continueSharing.accesskey = D
 getUserMedia.stopSharing.label = Delen stoppen
 getUserMedia.stopSharing.accesskey = s
 
-getUserMedia.sharingMenu.label = Tabbladen deelapparaten
+getUserMedia.sharingMenu.label = Apparaten die tabbladen delen
 getUserMedia.sharingMenu.accesskey = d
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
@@ -584,10 +584,10 @@ getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, microfoon en scherm
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microfoon en venster)
 getUserMedia.sharingMenuMicrophoneApplication = %S (microfoon en toepassing)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microfoon en scherm)
-getUserMedia.sharingMenuMicrophoneWindow = %S (microphone and window)
+getUserMedia.sharingMenuMicrophoneWindow = %S (microfoon en venster)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
-getUserMedia.sharingMenuUnknownHost = Unknown origin
+getUserMedia.sharingMenuUnknownHost = Onbekende herkomst
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S lijkt langzaam… te… starten.
