--- a/nl/browser/chrome/browser/quitDialog.properties
+++ b/nl/browser/chrome/browser/quitDialog.properties
@@ -10,4 +10,4 @@ saveTitle=&Opslaan en afsluiten
 neverAsk2=&De volgende keer niet vragen
 message=Wilt u dat uw tabbladen en vensters worden opgeslagen voor de volgende keer dat %S opstart?
 messageNoWindows=Wilt u dat uw tabbladen worden opgeslagen voor de volgende keer dat %S opstart?
-messagePrivate=U bent in privénavigatiemodus. %S nu afsluiten zal al uw open tabbladen en vensters wissen.
+messagePrivate=U bevindt zich in privénavigatiemodus. Nu afsluiten van %S zal alle geopende tabbladen en vensters verwijderen.
