--- a/nl/browser/installer/nsisstrings.properties
+++ b/nl/browser/installer/nsisstrings.properties
@@ -43,11 +43,11 @@ CREATE_SHORTCUTS=Snelkoppelingen voor $BrandShortName maken:
 ADD_SC_TASKBAR=Op mijn &Taakbalk
 ADD_SC_QUICKLAUNCHBAR=Op mijn &werkbalk Snel starten
 ADD_CheckboxShortcutInStartMenu=In mijn map &Programma’s van het menu Start
-ADD_CheckboxShortcutOnDesktop=Op mijn &bureaublad
+ADD_CheckboxShortcutOnDesktop=Op mijn &Bureaublad
 SPACE_REQUIRED=Benodigde ruimte:
 SPACE_AVAILABLE=Beschikbare ruimte:
 ONE_MOMENT_INSTALL=Een ogenblik, $BrandShortName zal worden gestart zodra de installatie is voltooid…
-ONE_MOMENT_UPGRADE=Een ogenblik, $BrandShortName zal worden gestart zodra de update is voltooid…
+ONE_MOMENT_UPGRADE=Een ogenblik, $BrandShortName zal worden gestart zodra de upgrade is voltooid…
 INSTALL_MAINT_SERVICE=&De $BrandShortName-achtergrondservice voor updates installeren
 SEND_PING=&Informatie over deze installatie naar Mozilla verzenden
 BROWSE_BUTTON=&Bladeren…
@@ -55,7 +55,7 @@ DEST_FOLDER=Doelmap
 
 DOWNLOADING_LABEL=$BrandShortName downloaden…
 INSTALLING_LABEL=$BrandShortName installeren…
-UPGRADING_LABEL=$BrandShortName updaten…
+UPGRADING_LABEL=$BrandShortName upgraden…
 
 SELECT_FOLDER_TEXT=Selecteer de map om $BrandShortName in te installeren.
 
