--- a/nl/browser/chrome/browser/shellservice.properties
+++ b/nl/browser/chrome/browser/shellservice.properties
@@ -7,9 +7,9 @@ safeModeLabel=%S &Veilige modus
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
-setDefaultBrowserMessage2          = Profiteer het meest van %S door het in te stellen als uw standaardbrowser
+setDefaultBrowserMessage2          = Haal het meeste uit %S door de browser in te stellen als uw standaardbrowser
 setDefaultBrowserConfirm.label     = %S als mijn standaardbrowser gebruiken
-setDefaultBrowserConfirm.accesskey = g
+setDefaultBrowserConfirm.accesskey = u
 setDefaultBrowserOptions.label     = Opties
 setDefaultBrowserOptions.accesskey = O
 setDefaultBrowserNotNow.label      = Niet nu
