--- a/en-CA/browser/chrome/browser/preferences/preferences.properties
+++ b/en-CA/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=The following cookies are stored on your computer:
 cookiesFiltered=The following cookies match your search:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Remove offline web site data
 offlineAppRemovePrompt=After removing this data, %S will not be available offline.  Are you sure you want to remove this offline web site?
 offlineAppRemoveConfirm=Remove offline data
