Bug 1074672 Part 1 - Implement a room list view for Loop

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -271,3 +271,8 @@ feedback_rejoin_button=Znova zavolať
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Nahlásiť používateľa
+
+## LOCALIZATION NOTE (rooms_list_current_conversations): We prefer to have no
+## number in the string, but if you need it for your language please use {{num}}.
+rooms_list_current_conversations=Aktuálna konverzácia;Aktuálne konverzácie;Aktuálne konverzácie
+rooms_list_no_current_conversations=Žiadne aktuálne konverzácie
