Bug 1014332 share button CUI widget

--- a/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -94,6 +94,9 @@ quit-button.tooltiptext.linux2 = Ukončiť %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Ukončiť %1$S (%2$S)
 
+social-share-button.label = Zdieľať túto stránku
+social-share-button.tooltiptext = Umožní zdieľať túto stránku
+
 panic-button.label = Zabudnúť
 panic-button.tooltiptext = Umožní zabudnúť na históriu prehliadania za definovaný čas
 
