--- a/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,11 +97,11 @@ quit-button.tooltiptext.mac = Ukončiť %1$S (%2$S)
 social-share-button.label = Zdieľať túto stránku
 social-share-button.tooltiptext = Umožní zdieľať túto stránku
 
+loop-call-button2.label = Začať rozhovor
+loop-call-button2.tooltiptext = Umožní začať rozhovor
+
 panic-button.label = Zabudnúť
 panic-button.tooltiptext = Umožní zabudnúť na históriu prehliadania za definovaný čas
 
 web-apps-button.label = Aplikácie
 web-apps-button.tooltiptext = Objavte svet aplikácií
-
-loop-call-button.label = Pozvať priateľa na hovor
-loop-call-button.tooltiptext = Umožní pozvať priateľa na internetový hovor
