--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} — pripojiť sa k rozhovoru
+first_time_experience_button_label=Začať
+
 share_link_header_text=Ak chcete pozvať priateľa na hovor, poskytnite mu tento odkaz:
+invite_header_text=Pozvať priateľa na hovor.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -52,12 +62,14 @@ problem_accessing_account=Pri pristupovaní k vášmu účtu nastala chyba
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Znova
 
-share_email_subject3=Váš priateľ Vás pozýva na hovor
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4={{clientShortname}} — pripojte sa k rozhovoru
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Ak chcete prijať túto pozvánku, jednoducho skopírujte alebo kliknite na tento odkaz:\r\n\r\n{{callUrl}}
+share_email_body4=Ahoj!\r\n\r\nPoďme sa porozprávať cez videohovor v prehliadači {{clientShortname}}:\r\n\r\nNemusíš si nič inštalovať. Stačí skopírovať nasledovný odkaz a zadať ho vo svojom prehliadači:\r\n\r\n{{callUrl}}\r\n\r\nĎalšie informácie o klientovi {{clientShortname}} nájdeš na stránke {{learnMoreUrl}}\r\n\r\nTeším sa na náš rozhovor!
 share_button=Odoslať e-mailom
+share_button2=Odoslať odkaz e-mailom
 copy_url_button=Skopírovať
+copy_url_button2=Skopírovať odkaz
 copied_url_button=Skopírované!
 
 panel_footer_signin_or_signup_link=Zaregistrujte sa alebo sa prihláste
@@ -241,12 +253,17 @@ connection_error_see_console_notification=Hovor zlyhal. Podrobnejšie informáci
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
-legal_text_and_links3=Používaním {{clientShortname}}u vyjadrujete súhlas s {{terms_of_use}} \
+## by the brand name.
+legal_text_and_links3=Používaním klienta {{clientShortname}} vyjadrujete súhlas s {{terms_of_use}} \
  a {{privacy_notice}}.
 legal_text_tos = Podmienkami používania
 legal_text_privacy = Zásadami ochrany súkromia
-client_shortname_fallback=tohto produkt
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo=Službu poskytuje
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Aký bol váš hovor?
 feedback_what_makes_you_sad=Prečo ste smutný?
@@ -272,7 +289,26 @@ feedback_rejoin_button=Znova zavolať
 ## an abusive user.
 feedback_report_user_button=Nahlásiť používateľa
 
+help_label=Pomocník
+tour_label=Prehliadka
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Konverzácia {{conversationLabel}}
+rooms_leave_button_label=Opustiť
+rooms_list_copy_url_tooltip=Skopírovať odkaz
 ## LOCALIZATION NOTE (rooms_list_current_conversations): We prefer to have no
 ## number in the string, but if you need it for your language please use {{num}}.
 rooms_list_current_conversations=Aktuálna konverzácia;Aktuálne konverzácie;Aktuálne konverzácie
+rooms_list_delete_tooltip=Odstrániť konverzáciu
+rooms_list_deleteConfirmation_label=Naozaj?
 rooms_list_no_current_conversations=Žiadne aktuálne konverzácie
+rooms_name_this_room_label=Pomenujte túto konverzáciu
+rooms_new_room_button_label=Začať konverzáciu
+rooms_only_occupant_label=Ste tu prvý.
+rooms_panel_title=Zvoľte konverzáciu alebo začnite novú
+rooms_room_full_label=V tejto konverzácii už sú dvaja účastníci.
+rooms_room_full_call_to_action_nonFx_label=Nainštalujte si {{brandShortname}} a začnite svoju vlastnú
+rooms_room_full_call_to_action_label=Ďalšie informácie o {{clientShortname}} »
+rooms_room_joined_label=Niekto sa pripojil ku konverzácii!
+rooms_room_join_label=Pripojiť sa ku konverzácii
