Bug 1079338 - Log resources blocked by tracking protection * * * Bug 1079338 - Put tracking protection logging in the Security tab

--- a/sk/netwerk/necko.properties
+++ b/sk/netwerk/necko.properties
@@ -38,3 +38,4 @@ PhishingAuthAccept=Rozumiem a zachovám opatrnosť
 SuperfluousAuth=Chystáte sa prihlásiť na server "%1$S" pod menom "%2$S,", ale tento server nevyžaduje autentifikáciu. Môže ísť o pokus oklamať vás.\n\nNaozaj chcete navštíviť server "%1$S"?
 AutomaticAuth=Chystáte sa prihlásiť na server "%1$S" pod menom "%2$S."
 
+TrackingUriBlocked=Zdroj "%1$S" bol zablokovaný, pretože je zapnutá ochrana pred sledovaním.
