Bug 1074672 Part 2 - Loop Rooms tab icon should reuse the Call tab icon

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -297,8 +297,11 @@ tour_label=Prehliadka
 rooms_default_room_name_template=Konverzácia {{conversationLabel}}
 rooms_leave_button_label=Opustiť
 rooms_list_copy_url_tooltip=Skopírovať odkaz
-## LOCALIZATION NOTE (rooms_list_current_conversations): We prefer to have no
-## number in the string, but if you need it for your language please use {{num}}.
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
 rooms_list_current_conversations=Aktuálna konverzácia;Aktuálne konverzácie;Aktuálne konverzácie
 rooms_list_delete_tooltip=Odstrániť konverzáciu
 rooms_list_deleteConfirmation_label=Naozaj?
