Bug 1080013 - string change for devtools

--- a/sk/browser/chrome/browser/devtools/timeline.properties
+++ b/sk/browser/chrome/browser/devtools/timeline.properties
@@ -38,3 +38,4 @@ timeline.records=ZÁZNAMY
 timeline.label.styles=Štýly
 timeline.label.reflow=Prekreslenie
 timeline.label.paint=Vykreslenie
+timeline.label.domevent=Udalosť DOM
