Bug 1081322: add string for new contacts phone number editing

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -97,6 +97,7 @@ new_contact_button=Nový kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Meno
 new_contact_email_placeholder=E-mailová adresa
+new_contact_phone_placeholder=Telefón s Firefox OS
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
