Strings for an optional badge to the hamburger menu when updates are available (bug 1080690)

--- a/sk/browser/chrome/browser/browser.properties
+++ b/sk/browser/chrome/browser/browser.properties
@@ -603,3 +603,12 @@ slowStartup.disableNotificationButton.accesskey = V
 customizeTips.tip0 = %1$S: prehliadač %2$S si môžete prispôsobiť podľa svojich predstáv. Jednoducho presuňte ktorékoľvek tlačidlo do ponuky alebo panela nástrojov. %3$S o prispôsobení prehliadača %2$S.
 customizeTips.tip0.hint = Tip
 customizeTips.tip0.learnMore = Ďalšie informácie
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Reštartovať %S a nainštalovať aktualizácie
+appmenu.updateFailed.description = Aktualizácia na pozadí zlyhala. Nainštalujte ju, prosím, ručne
+appmenu.restartBrowserButton.label = Reštartovať %S
+appmenu.downloadUpdateButton.label = Prevziať aktualizáciu
