Bug 1063702 - Update all Reset Firefox strings and relevant UI to new UX requirements

--- a/sk/toolkit/chrome/global/resetProfile.properties
+++ b/sk/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Zdá sa, že program %S nebol dlhšiu dobu spustený. Chcete obnoviť jeho nastavenia do pôvodných nastavení s cieľom ponúknuť Vám čo najlepší zážitok? Mimochodom, vitajte späť!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Obnoviť %S…
-resetProfile.resetButton.accesskey=b
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Obnoviť %S…
+refreshProfile.resetButton.accesskey=b
