safemode step 1 of 2

--- a/es-CL/browser/chrome/browser/browser.properties
+++ b/es-CL/browser/chrome/browser/browser.properties
@@ -331,3 +331,8 @@ slowStartup.disableNotificationButton.accesskey = A
 customizeTips.tip0 = %1$S: Puede personalizar %2$S para que trabaje de la misma forma que usted. Simplemente arrastre cualquiera de los anteriores al menú o a la barra de herramientas. %3$S acerca de personalizar %2$S.
 customizeTips.tip0.hint = Consejo
 customizeTips.tip0.learnMore = Aprender más
+
+appmenu.restartNeeded.description = Reiniciar %S para aplicar actualizaciones
+appmenu.updateFailed.description = La actualización en segundo plano falló, por favor descargue la actualización
+appmenu.restartBrowserButton.label = Reiniciar %S
+appmenu.downloadUpdateButton.label = Descargar actualización
