--- a/es-CL/browser/chrome/browser/devtools/timeline.properties
+++ b/es-CL/browser/chrome/browser/devtools/timeline.properties
@@ -38,3 +38,4 @@ timeline.records=REGISTROS
 timeline.label.styles=Estilos
 timeline.label.reflow=Reflujo
 timeline.label.paint=Dibujo
+timeline.label.domevent=Evento DOM
