--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -3,7 +3,10 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Panel Strings
-share_link_header_text=Comparte este enlace para invitar a alguien a charlar:
+clientShortname2=Firefox Hello
+first_time_experience_title={{clientShortname}} — Unirse a la conversación
+first_time_experience_button_label=Empezar
+share_link_header_text=Comparte este enlace para invitar a alguien a hablar:
 invitee_name_label=¿A quién está invitando?
 invitee_expire_days_label=La invitación expirará en {{expiry_time}} día;La invitación expirará en {{expiry_time}} días
 invitee_expire_hours_label=La invitación expirará en {{expiry_time}} hora;La invitación expirará en {{expiry_time}} horas
@@ -25,10 +28,12 @@ login_expired=Su sesión ha expirado
 service_not_available=Servicio no disponible en este momento
 problem_accessing_account=Hubo un problema al acceder a su cuenta
 retry_button=Reintentar
-share_email_subject3=Ha sido invitado a una conversación
-share_email_body3=Para aceptar esta invitación, solo copie o apriete en este enlace para iniciar su conversación:\r\n\r\n{{callUrl}}
+share_email_subject4={{clientShortname}} — Únete a la conversación
+share_email_body4=Hello!\r\n\r\nÚnete a una conversación con video usando {{clientShortname}}:\r\n\r\nNo tienes que descargar o instalar nada. Solo copia y pega esta URL en tu navegador:\r\n\r\n{{callUrl}}\r\n\r\nSi lo deseas, también puedes aprender más acerca de {{clientShortname}} en {{learnMoreUrl}}\r\n\r\n¡Hablemos pronto!
 share_button=Correo
+share_button2=Enviar enlace
 copy_url_button=Copiar
+copy_url_button2=Copiar enlace
 copied_url_button=¡Copiado!
 panel_footer_signin_or_signup_link=Conectarse o registrarse
 settings_menu_item_account=Cuenta
@@ -36,12 +41,12 @@ settings_menu_item_settings=Ajustes
 settings_menu_item_signout=Salir
 settings_menu_item_signin=Conectarse
 settings_menu_button_tooltip=Ajustes
-
 # Contact Strings (Panel)
 contacts_search_placesholder=Buscar…
 new_contact_button=Nuevo contacto
 new_contact_name_placeholder=Nombre
 new_contact_email_placeholder=Correo
+new_contact_phone_placeholder=Teléfono Firefox OS
 contacts_blocked_contacts=Contactos bloqueados
 add_contact_button=Añadir contacto
 valid_email_text_description=Por favor, ingrese una dirección de correo válida
@@ -110,7 +115,9 @@ legal_text_and_links3=Al usar {{clientShortname}} usted acepta los {{terms_of_us
   y la {{privacy_notice}}.
 legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
-client_shortname_fallback=este producto
+
+powered_by_beforeLogo=Impulsado por
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=¿Cómo fue su conversación?
 feedback_what_makes_you_sad=¿Qué le entristece?
@@ -127,6 +134,22 @@ feedback_window_will_close_in2=Esta ventana se cerrará en {{countdown}} segundo
 feedback_rejoin_button=Volver a unirse
 feedback_report_user_button=Reportar usuario
 
-## number in the string, but if you need it for your language please use {{num}}.
+help_label=Ayuda
+tour_label=Tour
+
+rooms_default_room_name_template=Conversación {{conversationLabel}}
+rooms_leave_button_label=Dejar
+rooms_list_copy_url_tooltip=Copiar enlace
 rooms_list_current_conversations=Conversación actual;Conversaciones actuales
+rooms_list_delete_tooltip=Borrar conversación
+rooms_list_deleteConfirmation_label=¿Está seguro?
 rooms_list_no_current_conversations=No hay conversaciones en este momento
+rooms_name_this_room_label=Ponle un nombre a esta conversación
+rooms_new_room_button_label=Empezar una conversación
+rooms_only_occupant_label=Es el primero aquí.
+rooms_panel_title=Escoge una conversación o inicia una nueva
+rooms_room_full_label=Ya hay dos personas en esta conversación.
+rooms_room_full_call_to_action_nonFx_label=Descargar {{brandShortname}} para iniciar la tuya
+rooms_room_full_call_to_action_label=Aprender más acerca de {{clientShortname}} »
+rooms_room_joined_label=¡Alguien se ha unido a la conversación!
+rooms_room_join_label=Unirse a la conversación
