--- a/es-CL/toolkit/chrome/global/resetProfile.properties
+++ b/es-CL/toolkit/chrome/global/resetProfile.properties
@@ -4,9 +4,7 @@
 
 # LOCALIZATION NOTE: These strings are used for profile reset.
 
-# LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Parece que hace tiempo no inicia %S. ¿Le gustaría limpiarlo para una experiencia fresca, como que fuera nuevo? Y aprovechando, ¡Bienvenido!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Reiniciar %S…
-resetProfile.resetButton.accesskey=e
+refreshProfile.resetButton.label=Refrescar %S…
+refreshProfile.resetButton.accesskey=e
