Last loop string

--- a/es-CL/browser/chrome/browser/loop/loop.properties
+++ b/es-CL/browser/chrome/browser/loop/loop.properties
@@ -7,6 +7,7 @@ clientShortname2=Firefox Hello
 first_time_experience_title={{clientShortname}} — Unirse a la conversación
 first_time_experience_button_label=Empezar
 share_link_header_text=Comparte este enlace para invitar a alguien a hablar:
+invite_header_text=Invita a alguien para que se una.
 invitee_name_label=¿A quién está invitando?
 invitee_expire_days_label=La invitación expirará en {{expiry_time}} día;La invitación expirará en {{expiry_time}} días
 invitee_expire_hours_label=La invitación expirará en {{expiry_time}} hora;La invitación expirará en {{expiry_time}} horas
