Update for Moz 34

--- a/hu/browser/chrome/browser/browser.properties
+++ b/hu/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=Ne jelenjen meg ez az üzenet a felugró ablakok
 popupWarningDontShowFromLocationbar=Ne jelenjen meg az információs sáv a felugró ablakok blokkolásakor.
 popupShowPopupPrefix='%S' megjelenítése
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=A %S tartalmat blokkol ezen az oldalon.
+badContentBlocked.notblocked.message=A %S nem blokkol tartalmat ezen az oldalon.
+
 # missing plugin installer
 installPlugin.message = Szeretné telepíteni az oldalon lévő média megjelenítéséhez szükséges bővítményt?
 installPlugin.button.label=%S telepítése
@@ -444,6 +449,12 @@ webapps.install.accesskey = T
 webapps.requestInstall = Telepíti a(z) „%1$S” webalkalmazást innen: (%2$S)?
 webapps.install.success = Alkalmazás telepítve
 webapps.install.inprogress = Telepítés folyamatban
+webapps.uninstall = Eltávolítás
+webapps.uninstall.accesskey = v
+webapps.doNotUninstall = Nem távolítom el
+webapps.doNotUninstall.accesskey = l
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = El szeretné távolítani ezt: „%1$S”?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S mostantól teljes képernyős.
@@ -504,10 +515,24 @@ getUserMedia.shareMicrophone.message = Megosztja mikrofonját a következő webh
 getUserMedia.shareScreen.message = Megosztja képernyőjét a következővel: %S?
 getUserMedia.shareCameraAndMicrophone.message = Megosztja kameráját és mikrofonját a következő webhellyel: %S
 getUserMedia.shareScreenAndMicrophone.message = Megosztja kameráját és mikrofonját a következővel: %S?
+getUserMedia.selectWindow.label=Megosztandó ablak:
+getUserMedia.selectWindow.accesskey=N
+getUserMedia.selectScreen.label=Megosztandó képernyő:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=Megosztandó alkalmazás:
+getUserMedia.selectApplication.accesskey=d
 getUserMedia.noVideo.label = Nincs videó
-getUserMedia.noWindowOrScreen.label = Egyik ablak vagy képernyő sem
+getUserMedia.noApplication.label = Nincs alkalmazás
+getUserMedia.noScreen.label = Nincs képernyő
+getUserMedia.noWindow.label = Nincs ablak
 getUserMedia.noAudio.label = Nincs hang
 getUserMedia.shareEntireScreen.label = Teljes képernyő
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 ablak);#1 (#2 ablak)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -515,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Teljes képernyő
 getUserMedia.shareSelectedDevices.label = Kijelölt eszköz megosztása;Kijelölt eszközök megosztása
 getUserMedia.shareSelectedDevices.accesskey = J
 getUserMedia.shareScreen.label = Képernyő megosztása
+getUserMedia.shareApplication.label = Kijelölt alkalmazás megosztása
 getUserMedia.shareWindow.label = Kijelölt ablak megosztása
 getUserMedia.shareSelectedItems.label = Kijelölt elemek megosztása
 getUserMedia.always.label = Mindig megosztható
@@ -526,6 +552,7 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Megosztja kameráját ezzel az oldallal.
 getUserMedia.sharingMicrophone.message2 = Megosztja mikrofonját ezzel az oldallal.
 getUserMedia.sharingCameraAndMicrophone.message2 = Megosztja kameráját és mikrofonját ezzel az oldallal.
+getUserMedia.sharingApplication.message = Megosztja egy alkalmazását ezzel az oldallal.
 getUserMedia.sharingScreen.message = Megosztja képernyőjét ezzel az oldallal.
 getUserMedia.sharingWindow.message = Megosztja egy ablakát ezzel az oldallal.
 getUserMedia.continueSharing.label = Megosztás folytatása
@@ -533,13 +560,34 @@ getUserMedia.continueSharing.accesskey = f
 getUserMedia.stopSharing.label = Megosztás befejezése
 getUserMedia.stopSharing.accesskey = E
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = A %S nem biztonságos tartalmat blokkolt.
-mixedContentBlocked.keepBlockingButton.label = Blokkolás fenntartása
-mixedContentBlocked.keepBlockingButton.accesskey = B
-mixedContentBlocked.unblock.label = Védelem kikapcsolása ezen az oldalon
-mixedContentBlocked.unblock.accesskey = k
+getUserMedia.sharingMenu.label = Eszközöket megosztó lapok
+getUserMedia.sharingMenu.accesskey = E
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (kamera)
+getUserMedia.sharingMenuMicrophone = %S (mikrofon)
+getUserMedia.sharingMenuApplication = %S (alkalmazás)
+getUserMedia.sharingMenuScreen = %S (képernyő)
+getUserMedia.sharingMenuWindow = %S (ablak)
+getUserMedia.sharingMenuCameraMicrophone = %S (kamera és mikrofon)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon és alkalmazás)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon és képernyő)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon és ablak)
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon és alkalmazás)
+getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon és képernyő)
+getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon és ablak)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Ismeretlen eredet
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = A %S nagyon… lassan… indul.
