--- a/hu/browser/chrome/browser/preferences/preferences.properties
+++ b/hu/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Az alábbi sütik vannak a számítógépen tárolva:
 cookiesFiltered=A következő sütik illeszkednek a keresőfeltételre:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Kapcsolat nélküli webhelyadatok eltávolítása
 offlineAppRemovePrompt=Ezen adatok eltávolítása után a(z) %S nem lesz elérhető kapcsolat nélküli módban. Biztosan eltávolítja ezt a kapcsolat nélküli webhelyet?
 offlineAppRemoveConfirm=Kapcsolat nélküli adatok eltávolítása
