--- a/hu/browser/chrome/browser/webrtcIndicator.properties
+++ b/hu/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S – megosztásjelző
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Kamerája és mikrofonja meg van osztva. Kattintson a megosztási beállításokhoz.
 webrtcIndicator.sharingCamera.tooltip              = Kamerája meg van osztva. Kattintson a megosztási beállításokhoz.
 webrtcIndicator.sharingMicrophone.tooltip          = Mikrofonja meg van osztva. Kattintson a megosztási beállításokhoz.
+webrtcIndicator.sharingApplication.tooltip = Egy alkalmazás meg van osztva. Kattintson a megosztási beállításokhoz.
 webrtcIndicator.sharingScreen.tooltip = Képernyője meg van osztva. Kattintson a megosztási beállításokhoz.
 webrtcIndicator.sharingWindow.tooltip = Egy ablak meg van osztva. Kattintson a megosztási beállításokhoz.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Egy ablak meg van osztva. Kattintson a m
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Kamera megosztása vele: „%S”
 webrtcIndicator.sharingMicrophoneWith.menuitem = Mikrofon megosztása vele: „%S”
+webrtcIndicator.sharingApplicationWith.menuitem = Alkalmazás megosztása ezzel: „%S”
 webrtcIndicator.sharingScreenWith.menuitem = Képernyő megosztása vele: „%S”
 webrtcIndicator.sharingWindowWith.menuitem = Ablak megosztása vele: „%S”
 webrtcIndicator.controlSharing.menuitem = Megosztás beállítása
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Kamera megosztása #1 lappal;Kamera megosztása #1 lappal
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Mikrofon megosztása #1 lappal;Mikrofon megosztása #1 lappal
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Alkalmazás megosztása #1 lappal;Alkalmazás megosztása #1 lappal
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Képernyő megosztása #1 lappal;Képernyő megosztása #1 lappal
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Ablak megosztása #1 lappal;Ablak megosztása #1 lappal
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
