--- a/hu/dom/chrome/accessibility/AccessFu.properties
+++ b/hu/dom/chrome/accessibility/AccessFu.properties
@@ -94,11 +94,10 @@ listEnd        =       Utolsó elem
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       #1. elem;#1. elem
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %2$S. %1$S, összesen: %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S / %2$S
 
 # Landmark announcements
 banner         =       fejléc
@@ -108,17 +107,14 @@ main           =       elsődleges
 navigation     =       navigáció
 search         =       keresés
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S, %S és %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 oszlop;#1 oszlop
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = 1 oszloppal;#1 oszloppal
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 sor;#1 sor
+tblRowInfo = és 1 sor;és #1 sor
 
 # table or grid cell information
 columnInfo = %S oszlop
@@ -190,18 +186,85 @@ quicknav_Table       = Táblázatok
 quicknav_Checkbox    = Jelölőnégyzetek
 
 # Shortened role names for braille
-linkAbbr           =       hiv
-pushbuttonAbbr     =       gmb
-passwordtextAbbr   =       jelszószöveg
-imagemapAbbr       =       képtrkp
-figureAbbr         =       ábr
-textareaAbbr       =       szövter
+menubarAbbr        =       menüsor
+scrollbarAbbr      =       görgetősáv
+gripAbbr           =       fogantyú
+alertAbbr          =       riasztás
+menupopupAbbr      =       felugró menü
+documentAbbr       =       dokumentum
+paneAbbr           =       ablaktábla
+dialogAbbr         =       párbeszédpanel
+separatorAbbr      =       elválasztó
+toolbarAbbr        =       eszköztár
+statusbarAbbr      =       állapotsor
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       oszlopfejléc
+rowheaderAbbr      =       sorfejléc
+columnAbbr         =       oszlop
+rowAbbr            =       sor
+cellAbbr           =       cella
+linkAbbr           =       hiv
+listAbbr           =       lista
+listitemAbbr       =       listaelem
+outlineAbbr        =       körvonal
+outlineitemAbbr    =       körvonalelem
+pagetabAbbr        =       lap
+propertypageAbbr   =       tulajdonságlap
+graphicAbbr        =       grafika
+pushbuttonAbbr     =       gmb
+checkbuttonAbbr    =       jelölőnégyzet
+radiobuttonAbbr    =       választógomb
+comboboxAbbr       =       legördülő lista
+progressbarAbbr    =       folyamatjelző
+sliderAbbr         =       csúszka
+spinbuttonAbbr     =       léptetőgomb
+diagramAbbr        =       diagram
+animationAbbr      =       animáció
+equationAbbr       =       egyenlet
+buttonmenuAbbr     =       gombmenü
+whitespaceAbbr     =       üres hely
+pagetablistAbbr    =       oldallap-lista
+canvasAbbr         =       vászon
+checkmenuitemAbbr  =       jelölő menüpont
+labelAbbr          =       címke
+passwordtextAbbr   =       jelszószöveg
+radiomenuitemAbbr  =       választó menüpont
+textcontainerAbbr  =       szövegtároló
+togglebuttonAbbr   =       kapcsológomb
+treetableAbbr      =       fatáblázat
+headerAbbr         =       fejléc
+footerAbbr         =       lábléc
+paragraphAbbr      =       bekezdés
+entryAbbr          =       beviteli mező
+captionAbbr        =       képaláírás
+headingAbbr        =       fejléc
+sectionAbbr        =       szakasz
+formAbbr           =       űrlap
+comboboxlistAbbr   =       legördülő lista
+comboboxoptionAbbr =       legördülő lista elem
+imagemapAbbr       =       képtrkp
+listboxoptionAbbr  =       listamező elem
+listboxAbbr        =       lista
+flatequationAbbr   =       egyszerű egyenlet
+gridcellAbbr       =       rácscella
+noteAbbr           =       megjegyzés
+figureAbbr         =       ábr
+definitionlistAbbr =       definíciós lista
+termAbbr           =       kifejezés
+definitionAbbr     =       definíció
+textareaAbbr       =       szövter
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1o;#1o
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1o;#1o
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1s;#1s
+tblRowInfoAbbr = #1s;#1s
 cellInfoAbbr = c%Ss%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
