--- a/hu/dom/chrome/dom/dom.properties
+++ b/hu/dom/chrome/dom/dom.properties
@@ -208,3 +208,4 @@ KeyNameZoomWarning=A KeyboardEvent.key „Zoom” értéke elavult, és át lesz
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=A KeyboardEvent.key „Dead” kezdetű értékei elavulta, és egyesítve lesznek a „Dead” értékké. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=A XUL csomópontok tartalomdokumentumba importálása elavult. Ez a funkcionalitás hamarosan eltávolításra kerülhet.
+XMLDocumentLoadPrincipalMismatch=A document.load használata tilos olyan dokumentumokon, amelyek más ablakokból származnak. Csak az az ablak hívhatja a .load-ot a dokumentumon, amelyben létrejött. Inkább használja az XMLHttpRequest-et.
