--- a/hu/dom/chrome/security/csp.properties
+++ b/hu/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Egy JavaScript karakterláncból hívására tett kís
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = %1$S értelmezése gépnévként, nem pedig kulcsszóként. Ha ezt kulcsszónak szánta, használja ezt (aposztrófok közt): '%2$S'.
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = A direktíva nem támogatott: „%1$S”. A direktíva és az értékek figyelmen kívül maradnak.
 
 # CSP Errors:
 policyURINotAlone = a policy-uri direktíva csak önmagában jelenhet meg
