--- a/hu/mobile/android/chrome/browser.properties
+++ b/hu/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Telepítés
 
 # Alerts
 alertAddonsDownloading=Kiegészítő letöltése
-alertAddonsInstalledNoRestart=A telepítés kész
 alertAddonsFail=A telepítés nem sikerült
+alertAddonsInstalledNoRestart.message=A telepítés kész
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=KIEGÉSZÍTŐK
 
 alertDownloadsStart2=Indul a letöltés
 alertDownloadsDone2=A letöltés kész
@@ -19,6 +23,9 @@ alertDownloadsToast=A letöltés elkezdődött…
 alertDownloadsPause=Szünet
 alertDownloadsResume=Folytatás
 alertDownloadsCancel=Mégse
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=A letöltések letiltva a vendég munkamenetekben
 
 alertFullScreenToast=A teljes képernyős mód elhagyásához nyomja meg a VISSZA billentyűt
 
@@ -116,6 +123,35 @@ contacts.ask=%S elérheti a névjegyeit?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Ne kérdezze újra ezen a webhelyen
 
+# Device Storage API
+deviceStorageMusic.allow=Engedélyezés
+deviceStorageMusic.dontAllow=Tiltás
+deviceStorageMusic.ask=%S elérheti a zenéit?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Ne kérdezze újra ezen a webhelyen
+
+deviceStoragePictures.allow=Engedélyezés
+deviceStoragePictures.dontAllow=Tiltás
+deviceStoragePictures.ask=%S elérheti a képeit?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Ne kérdezze újra ezen a webhelyen
+
+deviceStorageSdcard.allow=Engedélyezés
+deviceStorageSdcard.dontAllow=Tiltás
+deviceStorageSdcard.ask=%S elérheti a külső adattárolót?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Ne kérdezze újra ezen a webhelyen
+
+deviceStorageVideos.allow=Engedélyezés
+deviceStorageVideos.dontAllow=Tiltás
+deviceStorageVideos.ask=%S elérheti a videóit?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Ne kérdezze újra ezen a webhelyen
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Szöveg a vágólapra másolva
 
 # Casting
-casting.prompt=Eszközre vetítés
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Küldés eszközre
+casting.mirrorTab=Lap tükrözése
+casting.mirrorTabStop=Tükrözés leállítása
 
 # Context menu
 contextmenu.openInNewTab=Megnyitás új lapon
@@ -209,7 +249,9 @@ contextmenu.unmute=Hang be
 contextmenu.saveVideo=Video mentése
 contextmenu.saveAudio=Hang mentése
 contextmenu.addToContacts=Névjegyekhez adás
-contextmenu.castToScreen=Képernyőre vetítés
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Küldés eszközre
 
 contextmenu.copy=Másolás
 contextmenu.cut=Kivágás
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Levelező
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Válasszon hírforrást
 feedHandler.subscribeWith=Feliratkozás ezzel
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S elavult. Használja inkább ezt: %S
