--- a/hu/mobile/android/chrome/webapp.properties
+++ b/hu/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 frissítés sikertelen;#1 frissítés sikertelen
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=%1$S frissítésének letöltése sikertelen;%1$S frissítéseinek letöltése sikertelen
+
+webappsDisabledInGuest=Az appok telepítése letiltva a vendég munkamenetekben
