--- a/hu/toolkit/chrome/global/aboutSupport.properties
+++ b/hu/toolkit/chrome/global/aboutSupport.properties
@@ -64,18 +64,20 @@ clearTypeParametersNotFound = Nem találhatók a ClearType-paraméterek
 adapterDescription = Adapter leírása
 adapterVendorID = Gyártóazonosító
 adapterDeviceID = Eszközazonosító
+adapterSubsysID = Alrendszer-azonosító
 adapterDrivers = Adapter illesztőprogramjai
 adapterRAM = Adapter memóriája
 driverVersion = Illesztőprogram verziója
 driverDate = Illesztőprogram dátuma
-adapterDescription2 = Adapter leírása (GPU #2)
-adapterVendorID2 = Gyártóazonosító (GPU #2)
-adapterDeviceID2 = Eszközazonosító (GPU #2)
-adapterDrivers2 = Adapter illesztőprogramjai (GPU #2)
-adapterRAM2 = Adapter RAM (GPU #2)
-driverVersion2 = Illesztőprogram verziója (GPU #2)
-driverDate2 = Illesztőprogram dátuma (GPU #2)
-isGPU2Active = GPU #2 aktív
+adapterDescription2 = Adapter leírása (2. GPU)
+adapterVendorID2 = Gyártóazonosító (2. GPU)
+adapterDeviceID2 = Eszközazonosító (2. GPU)
+adapterSubsysID2 = Alrendszer-azonosító (2. GPU)
+adapterDrivers2 = Adapter illesztőprogramjai (2. GPU)
+adapterRAM2 = Adapter RAM (2. GPU)
+driverVersion2 = Illesztőprogram verziója (2. GPU)
+driverDate2 = Illesztőprogram dátuma (2. GPU)
+isGPU2Active = 2. GPU aktív
 webglRenderer = WebGL-megjelenítő
 
 minLibVersions = Elvárt minimális verzió
