--- a/hu/webapprt/webapprt/webapp.properties
+++ b/hu/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=%S telepítése
 webapps.install.description=Valóban telepíteni szeretné a(z) %S alkalmazást?
 webapps.install.install=Alkalmazás telepítése
 webapps.install.dontinstall=Ne telepítse
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=%S eltávolítása
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=El szeretné távolítani ezt: %S?
+webapps.uninstall.uninstall=Alkalmazás eltávolítása
+webapps.uninstall.dontuninstall=Nem távolítom el
 
 paymentDialog.title=Fizetés
 paymentDialog.message=Melyik fizetésszolgáltatót szeretné használni?
