--- a/hu/browser/chrome/browser/devtools/scratchpad.properties
+++ b/hu/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Scratchpad panel
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Scratchpad
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Becsapós levél figyelmeztetés: Legyen óvatos olyan dolgok beillesztésekor, amiket nem ért. Ez lehetővé teheti a támadóknak a személyazonossága ellopását, vagy a számítógépe feletti irányítás átvételét. Írja be a következőt alább a beillesztés engedélyezéséhez: „%S”.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=beillesztem
