--- a/hu/browser/chrome/browser/devtools/toolbox.properties
+++ b/hu/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=Fejlesztői eszközök
 # for the options panel tab.
 optionsButton.tooltip=Eszközkészlet beállításai
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Beállítások
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=Eszközkészlet beállításai panel
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Válasszon egy elemet az oldalról
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Sötét téma
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Világos téma
