--- a/hu/browser/chrome/browser/loop/loop.properties
+++ b/hu/browser/chrome/browser/loop/loop.properties
@@ -6,34 +6,264 @@
 
 share_link_header_text=Ossza meg ezt valaki meghívásához a beszélgetésbe:
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Kit hív meg?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=A meghívás lejár {{expiry_time}} nap múlva;A meghívás lejár {{expiry_time}} nap múlva
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=A meghívás lejár {{expiry_time}} óra múlva;A meghívás lejár {{expiry_time}} óra múlva
+
 # Status text
+display_name_guest=Vendég
 display_name_dnd_status=Ne zavarjanak
 display_name_available_status=Elérhető
 
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=Elnézést, nem sikerült a hívási URL lekérése.
+session_expired_error_description=A munkamenet lejárt. A korábban létrehozott és megosztott egyik URL sem fog működni.
+could_not_authenticate=Nem sikerült a hitelesítés
+password_changed_question=Megváltoztatta a jelszavát?
+try_again_later=Próbálja újra később
+could_not_connect=Nem sikerült kapcsolódni a kiszolgálóhoz
+check_internet_connection=Ellenőrizze internetkapcsolatát
+login_expired=Bejelentkezése lejárt
+service_not_available=A szolgáltatás most nem érhető el
+problem_accessing_account=Hiba történt a fiókja elérésekor
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Újra
+
+share_email_subject3=Meghívták egy beszélgetésbe
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=A meghívó elfogadásához másolja ezt a hivatkozást vagy kattintson rá a beszélgetés megkezdéséhez:↩\n↩\n {{callUrl}}
+share_button=E-mail
+copy_url_button=Másolás
+copied_url_button=Másolva!
+
+panel_footer_signin_or_signup_link=Bejelentkezés vagy regisztráció
+
+settings_menu_item_account=Postafiók
+settings_menu_item_settings=Beállítások
+settings_menu_item_signout=Kijelentkezés
+settings_menu_item_signin=Bejelentkezés
+settings_menu_button_tooltip=Beállítások
+
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=Keresés…
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Új névjegy
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Név
+new_contact_email_placeholder=E-mail
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+add_contact_button=Partner hozzáadása
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+valid_email_text_description=Írjon be egy érvényes e-mail címet
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Partner hozzáadása vagy importálása
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+import_contacts_button=Importálás
+importing_contacts_progress_button=Importálás…
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Partnerek szinkronizálása
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Elnézést, a partner importálása sikertelen
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Elnézést, a partner importálása sikertelen, segítségért lásd a {{import_failed_support_link_label}}
+import_failed_support_link_label=támogatói oldalunkat
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Partner eltávolítása
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+confirm_delete_contact_alert=Biztosan törölni kívánja ezt a partnert?
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Partner eltávolítása
+confirm_delete_contact_cancel_button=Mégse
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Partner blokkolása
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Blokkolás feloldása
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Névjegy szerkesztése…
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Névjegy szerkesztése
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Név
+edit_contact_email_label=E-mail
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Kész
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Hangbeszélgetés
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Videobeszélgetés
 
 # Conversation Window Strings
 
-incoming_call_title=Bejövő hívás…
-incoming_call=Bejövő hívás
-incoming_call_answer_button=Válasz
-incoming_call_decline_button=Elvetés
-incoming_call_ignore_button=Mellőzés
+initiate_call_button_label2=Készen áll a beszélgetésre?
+incoming_call_title2=Beszélgetési kérés
+incoming_call_accept_button=Elfogadás
+incoming_call_accept_audio_only_tooltip=Elfogadás hanggal
+incoming_call_cancel_button=Mégse
+incoming_call_cancel_and_block_button=Megszakítás és blokkolás
 incoming_call_block_button=Tiltás
 hangup_button_title=Lerakás
+hangup_button_caption2=Kilépés
 mute_local_audio_button_title=Saját hang némítása
 unmute_local_audio_button_title=Saját hang visszahangosítása
 mute_local_video_button_title=Saját videó némítása
 unmute_local_video_button_title=Saját videó visszahangosítása
 
-peer_ended_conversation=A partner befejezte a társalgást.
-call_has_ended=A hívás befejeződött.
-close_window=Ablak bezárása
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Beszélgetés vele: {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Elkezdi a beszélgetést?
+initiate_audio_video_call_button2=Indítás
+initiate_audio_video_call_tooltip2=Videobeszélgetés kezdése
+initiate_audio_call_button2=Hangbeszélgetés
+initiate_call_cancel_button=Mégse
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Csatlakozás…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Csörgetés…
+
+peer_ended_conversation2=A hívott személy befejezte a beszélgetést.
+conversation_has_ended=A beszélgetés befejeződött.
+restart_call=Újracsatlakozás
+
+generic_failure_title=Hiba történt.
+generic_failure_with_reason2=Megpróbálhatja újra, vagy elküldheti a később elérendő hivatkozást e-mailben.
+generic_failure_no_reason2=Szeretné újrapróbálni?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Ez a személy nem érhető el
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=A hívása nem jutott át.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Újra
+email_link_button=Hivatkozás küldése
+cancel_button=Mégse
 
 cannot_start_call_session_not_ready=Nem indítható hívás, a munkamenet még nem kész.
 network_disconnected=A hálózati kapcsolat váratlanul megszakadt.
-
 connection_error_see_console_notification=A hívás sikertelen, részletekért lásd a konzolt.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=A termék használatával elfogadja a <a target="_blank" href="{{terms_of_use_url}}">Felhasználási feltételeket</a> és az <a href="{{privacy_notice_url}}">Adatvédelmi nyilatkozatot</a>.
+
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=A {{clientShortname}} használatával elfogadja a {{terms_of_use}} és az {{privacy_notice}}.
+legal_text_tos = felhasználási feltételeket
+legal_text_privacy = adatvédelmi megjegyzést
+client_shortname_fallback=jelen termék
+
+feedback_call_experience_heading2=Milyen volt a beszélgetés?
+feedback_what_makes_you_sad=Miért szomorú?
+feedback_thank_you_heading=Köszönjük a visszajelzést!
+feedback_category_audio_quality=Hangminőség
+feedback_category_video_quality=Videominőség
+feedback_category_was_disconnected=Megszakadt a kapcsolat
+feedback_category_confusing=Összezavaró
+feedback_category_other=Egyéb:
+feedback_custom_category_text_placeholder=Mi volt a gond?
+feedback_submit_button=Elküldés
+feedback_back_button=Vissza
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Ez az ablak {{countdown}} másodperc múlva bezáródik;Ez az ablak {{countdown}} másodperc múlva bezáródik
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Újracsatlakozás
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Felhasználó jelentése
