--- a/hu/browser/chrome/browser/newTab.properties
+++ b/hu/browser/chrome/browser/newTab.properties
@@ -5,6 +5,26 @@
 newtab.pin=Webhely rögzítése ezen a helyen
 newtab.unpin=Rögzítés feloldása
 newtab.block=Eltávolítás
-newtab.show=Az új lap oldal megjelenítése
-newtab.hide=Az új lap oldal elrejtése
-newtab.sponsored=Információk megjelenítése a támogatott csempékről
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SZPONZORÁLT
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Ezt a csempét egy Mozilla partner nevében jelenítjük meg. Bármikor eltávolíthatja a %1$S gombra kattintva. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Egy Mozilla partner vizuálisan bővítette ezt a csempét, lecserélve a képernyőképet. A bővített csempék kikapcsolhatók a %1$S gomb megnyomásával a beállításokban. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=Új lap nyitásakor a gyakran látogatott oldalak csempéi jelennek meg, valamint olyanok is, amelyek érdekelhetik Önt. Ezek közül néhányat a Mozilla partnerei szponzorálhatnak. Mindig jelezni fogjuk, hogy mely csempék szponzoráltak. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Ezen szolgáltatás nyújtásához a Mozilla bizonyos analitikai információkat gyűjt és használ a csempék használatával kapcsolatban, az %1$Snek megfelelően.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=A csempék szolgáltatást kikapcsolhatja a beállításokban a %1$S gomb megnyomásával.
+newtab.learn.link=További tudnivalók…
+newtab.privacy.link=adatvédelmi megjegyzés
