--- a/hu/browser/chrome/browser/shellservice.properties
+++ b/hu/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=%S &beállításai
 safeModeLabel=%S &csökkentett mód
-setDefaultBrowserTitle=Alapértelmezett böngésző
-setDefaultBrowserMessage=A %S pillanatnyilag nem az alapértelmezett böngésző. Szeretné alapértelmezett böngészővé tenni?
-setDefaultBrowserDontAsk=Ellenőrzés elvégzése a %S minden indításakor
-alreadyDefaultBrowser=A %S már be van állítva alapértelmezett böngészőnek.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Hozza ki a legtöbbet a %Sból alapértelmezett böngészőként beállításával.
+setDefaultBrowserConfirm.label     = %S legyen az alapértelmezett böngésző
+setDefaultBrowserConfirm.accesskey = a
+setDefaultBrowserOptions.label     = Beállítások
+setDefaultBrowserOptions.accesskey = B
+setDefaultBrowserNotNow.label      = Most nem
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = Ne kérdezze meg többet
+setDefaultBrowserNever.accesskey   = k
+
+
 desktopBackgroundLeafNameWin=Asztalhatter.bmp
 DesktopBackgroundDownloading=Kép mentése…
 DesktopBackgroundSet=Asztalháttér beállítása
