--- a/hu/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hu/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=A jelszó zárolva van.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Ismeretlen PKCS #11 hiba.
 SEC_ERROR_BAD_CRL_DP_URL=Érvénytelen vagy nem támogatott URL a CRL terjesztési pont nevében.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=A tanúsítvány egy nem biztonságos, és emiatt letiltott aláírási algoritmussal lett aláírva.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=A kiszolgáló a kulcsrögzítést (HPKP) használja, de nem hozható létre a rögzítési készletnek megfelelő megbízható tanúsítványlánc. A kulcsrögzítés irányelvsértései nem bírálhatók felül.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=A kiszolgáló által használt tanúsítvány alapvető megszorítások kiterjesztése hitelesítésszolgáltatóként azonosítja. A megfelelően kibocsátott tanúsítványok esetén ennek nem így kell lennie.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=A kiszolgáló által bemutatott tanúsítvány kulcsmérete túl kicsi biztonságos kapcsolat létrehozásához.
