Fix up remaining strings for FF34

--- a/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/hu/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,3 +99,6 @@ quit-button.tooltiptext.mac = Kilépés a %1$Sból  (%2$S)
 
 panic-button.label = Elfelejtés
 panic-button.tooltiptext = Böngészési előzmények elfelejtése
+
+loop-call-button.label = Meghívás beszélgetésre
+loop-call-button.tooltiptext = Meghívás beszélgetésre
